# shrimple-downloader

./: .gitignore  Cargo.toml  build.rs
src/: logger.rs  main.rs  stats.rs  utils.rs  website.rs
src/bot/: cache.rs  mod.rs  telegram.rs
src/download/: mod.rs  piped.rs  yt_dlp.rs
website/: 404.html  download.html  download.js  index.css  index.html
